@@ -2,6 +2,9 @@ $Id$
 
 2022-02-01  Christian Franke  <franke@computer.org>
 
+	os_win32/update-smart-drivedb.nsi: Remove, no longer used.
+	Makefile.am: Remove related targets.
+
 	os_win32/installer.nsi: Install update-smart-drivedb.ps1.
 	Delete update-smart-drivedb.exe.  Remove outdated delete commands.
 
